呼叫工作台修改

--- a/documentDetails.html
+++ b/documentDetails.html
@@ -243,11 +243,13 @@
 	</div>
 	<div style="float: left; margin-top: 7px; margin-bottom: 20px; margin-left: 12px; width: 80%;">
 		<span style="display: block; margin-top: 10px; float: left; line-height: 30px;">改约原因：</span>
-		<input  type="radio" name="yuanyin" value="原时间不在家" title="原时间不在家" checked=""><br />
 		<div style="margin-left: 70px; position: relative;">
+			<input  type="radio" name="yuanyin" value="原时间不在家" title="原时间不在家" checked=""><br />
 			<input  type="radio" name="yuanyin" value="改约原因2" title="改约原因2"><br />
+		</div>
+		<div style="margin-left: 70px; position: relative;">
 			<input  type="radio" name="yuanyin" value="其他" title="其他">
-			<input style="display:block; position:absolute; height:30px; left:70px; top:51px;width: 60%;  " type="text" name="title" lay-verify="title" autocomplete="off" placeholder="请输入改约原因" class="layui-input">
+			<input style="display:block; position:absolute; height:30px; left:70px; top:12px;width: 60%;  " type="text" name="title" lay-verify="title" autocomplete="off" placeholder="请输入改约原因" class="layui-input">
 		</div>
 	</div>
   </div>
