--- a/index_callCentre.html
+++ b/index_callCentre.html
@@ -42,7 +42,7 @@
                      <div class="clearfix z_layui_input pull-left">
                          <div class="layui-form-item">
                              <div class="layui-input-block" style="margin-left: 10px;margin-top: 6px">
-                                 <input style="width: 130px;height: 28px;text-align: left" type="text" name="title" required  lay-verify="required" placeholder="电话" autocomplete="off" class="layui-input">
+                                 <input style="width: 130px;height: 28px;text-align: left" type="text" name="title" required=""  lay-verify="required" placeholder="" autocomplete="off" class="layui-input">
                              </div>
                          </div>
                      </div>
@@ -53,7 +53,7 @@
                      <div class="clearfix z_layui_input pull-left">
                          <div class="layui-form-item">
                              <div class="layui-input-block" style="margin-left: 10px;margin-top: 6px">
-                                 <input style="width: 100px;height: 28px;text-align: left" type="text" name="title" required  lay-verify="required" placeholder="姓名" autocomplete="off" class="layui-input">
+                                 <input style="width: 100px;height: 28px;text-align: left" type="text" name="title" required=""  lay-verify="required" placeholder="" autocomplete="off" class="layui-input">
                              </div>
                          </div>
                      </div>
@@ -72,7 +72,7 @@
                          </div> 
 
                          <div class="layui-input-block" style="position: absolute;top: 6px;left: 45px;">
-                             <input style="width: 106px;height: 28px;text-align: left" type="text" name="title" required  lay-verify="required" placeholder="小区" autocomplete="off" class="layui-input">
+                             <input style="width: 106px;height: 28px;text-align: left" type="text" name="title" required=""  lay-verify="required" placeholder="" autocomplete="off" class="layui-input">
                          </div>
                      </div>
 
@@ -83,7 +83,7 @@
                      <div class="clearfix z_layui_input pull-left">
                          <div class="layui-form-item">
                              <div class="layui-input-block" style="margin-left: 10px;margin-top: 6px">
-                                 <input style="width: 45px;height: 28px;text-align: left" type="text" name="title" required  lay-verify="required" autocomplete="off" class="layui-input">
+                                 <input style="width: 45px;height: 28px;text-align: left" type="text" name="title" required=""  lay-verify="required" autocomplete="off" class="layui-input">
                              </div>
                          </div>
                      </div>
@@ -91,7 +91,7 @@
                      <div class="clearfix z_layui_input pull-left">
                          <div class="layui-form-item">
                              <div class="layui-input-block" style="margin-left: 10px;margin-top: 6px">
-                                 <input style="width: 45px;height: 28px;text-align: left" type="text" name="title" required  lay-verify="required" autocomplete="off" class="layui-input">
+                                 <input style="width: 45px;height: 28px;text-align: left" type="text" name="title" required=""  lay-verify="required" autocomplete="off" class="layui-input">
                              </div>
                          </div>
                      </div>
@@ -99,7 +99,7 @@
                      <div class="clearfix z_layui_input pull-left">
                          <div class="layui-form-item">
                              <div class="layui-input-block" style="margin-left: 10px;margin-top: 6px">
-                                 <input style="width: 45px;height: 28px;text-align: left" type="text" name="title" required  lay-verify="required" autocomplete="off" class="layui-input">
+                                 <input style="width: 45px;height: 28px;text-align: left" type="text" name="title" required=""  lay-verify="required" autocomplete="off" class="layui-input">
                              </div>
                          </div>
                      </div>
@@ -108,7 +108,7 @@
                      <div class="clearfix z_layui_input pull-left">
                          <div class="layui-form-item">
                              <div class="layui-input-block" style="margin-left: 10px;margin-top: 6px">
-                                 <input style="width: 100px;height: 28px;text-align: left" type="text" name="title" required  lay-verify="required" autocomplete="off" class="layui-input">
+                                 <input style="width: 100px;height: 28px;text-align: left" type="text" name="title" required=""  lay-verify="required" autocomplete="off" class="layui-input">
                              </div>
                          </div>
                      </div>
@@ -141,10 +141,11 @@
                              <img class="z_suotouPic pull-left" src="img/z_suotou.png" alt="">
                              <div class="z_leibiePic">新奥燃气</div>
                              <div class="z_leibiePic">户主</div>
-                             <span class="pull-right" style="color: rgb(134,215,245);margin-left: 3px;cursor: default;">添加地址</span>
-                             <span class="pull-right" style="background-image: url('img/z_xljt.png');width: 10px;height: 10px;margin-top: 5px;margin-right: 1px"></span>
-                             <span class="pull-right" style="color: rgb(134,215,245);margin-left: 3px;cursor: default;margin-right: 8px">添加联系人</span>
-                             <span class="pull-right" style="background-image: url('img/z_xljt.png');width: 10px;height: 10px;margin-top: 5px;margin-right: 1px"></span>
+                             <span class="pull-right" style="transform:rotate(-90deg);background-image: url('img/z_xljt.png');width: 10px;height: 10px;margin-top: 5px;margin-right: 1px"></span>
+                             <span class="pull-right" style="color: rgb(134,215,245);margin-left: 3px;cursor: default;margin-right: 2px">添加地址</span>
+                             <span class="pull-right" style="transform:rotate(-90deg);background-image: url('img/z_xljt.png');width: 10px;height: 10px;margin-top: 5px;margin-right: 8px"></span>
+                             <span class="pull-right" style="color: rgb(134,215,245);cursor: default;margin-right: 1px">添加联系人</span>
+
                          </div>
 
                          <div class="z_line" style="margin-top: 15px">
@@ -664,6 +665,29 @@
                              <span class="pull-right z_openyhhd" style="color: rgb(134,215,245);margin-left: 3px;cursor: default;">展开</span>
                              <span class="pull-right" style="background-image: url('img/z_xljt.png');width: 10px;height: 10px;margin-top: 5px;"></span>
                          </div>
+                         <!--<div class="z_line z_yhhd_line">-->
+                             <!--<div><span>水盆下水疏通</span><span> (次)</span></div>-->
+                             <!--<div class="z_mt10"><span>活动时间:</span><span>&nbsp;&nbsp;2018-1-1 12:22</span></div>-->
+                             <!--<div class="z_mt10"><span>原价:</span><span>100元</span><span style="margin-left: 5px">APP优惠价:</span><span style="color: rgb(253,109,100);">80元</span><span style="margin-left: 5px">CRM优惠价:</span><span style="color: rgb(253,109,100);">80元</span></div>-->
+                         <!--</div>-->
+                         <!--<div class="z_line z_yhhd_line">-->
+                             <!--<div><span>水盆下水疏通</span><span> (次)</span></div>-->
+                             <!--<div class="z_mt10"><span>活动时间:</span><span>&nbsp;&nbsp;2018-1-1 12:22</span></div>-->
+                             <!--<div class="z_mt10"><span>原价:</span><span>100元</span><span style="margin-left: 5px">APP优惠价:</span><span style="color: rgb(253,109,100);">80</span><span style="margin-left: 5px">CRM优惠价:</span><span style="color: rgb(253,109,100);">80元</span></div>-->
+                         <!--</div>-->
+                         <!--<div class="z_line z_yhhd_line">-->
+                             <!--<div><span>水盆下水疏通</span><span> (次)</span></div>-->
+                             <!--<div class="z_mt10"><span>活动时间:</span><span>&nbsp;&nbsp;2018-1-1 12:22</span></div>-->
+                             <!--<div class="z_mt10"><span>原价:</span><span>100元</span><span style="margin-left: 5px">APP优惠价:</span><span style="color: rgb(253,109,100);">80</span><span style="margin-left: 5px">CRM优惠价:</span><span style="color: rgb(253,109,100);">80元</span></div>-->
+                         <!--</div>-->
+                         <!--<div class="z_line z_yhhd_bottom">-->
+                             <!--<p>*以上报价为维修人工费, 不包含材料配件费</p>-->
+                             <!--<nav aria-label=''>-->
+                                 <!--<ul  class='pagination' id='pagination'></ul>-->
+                             <!--</nav>-->
+                         <!--</div>-->
+                     </div>
+                     <div class="isShowYHList" style="display: none;background-color: white;margin-top: -4px;padding: 0 10px 10px 10px">
                          <div class="z_line z_yhhd_line">
                              <div><span>水盆下水疏通</span><span> (次)</span></div>
                              <div class="z_mt10"><span>活动时间:</span><span>&nbsp;&nbsp;2018-1-1 12:22</span></div>
@@ -685,7 +709,6 @@
                                  <ul  class='pagination' id='pagination'></ul>
                              </nav>
                          </div>
-
                      </div>
 
                      <!--商城商城-->
@@ -705,7 +728,7 @@
                                  </div>
                              </div>
 
-                             <span class="pull-right" style="background-image: url('img/z_xljt.png');width: 10px;height: 10px;margin-top: 9px;"></span>
+                             <span class="pull-right" style="transform:rotate(-90deg);background-image: url('img/z_xljt.png');width: 10px;height: 10px;margin-top: 9px;"></span>
                              <span class="pull-right" style="color: rgb(134,215,245);margin-right: 3px;cursor: default;margin-top: 5px;">查询商品</span>
 
                          </div>
@@ -827,11 +850,12 @@
 		   
              //展开收回优惠活动
              $('.z_openyhhd').on('click', function () {
-                 if($('.z_yhhd').css('height')=='40px'){
-                     $('.z_yhhd').css('height','476px');
+
+                 $('.isShowYHList').fadeToggle();
+
+                 if($('.z_openyhhd').html()=='展开'){
                      $('.z_openyhhd').html('收回');
                  }else {
-                     $('.z_yhhd').css('height','40px');
                      $('.z_openyhhd').html('展开');
                  }
              });
@@ -848,11 +872,6 @@
                  }
 
              });
-
-//            
-
-            
-
              //问题的保存按钮点击
              $('.z_saveQuestionBtn').on('click', function () {
 
